# graviti

./: HIGHLIGHT_FEATURE_TESTING.md  HIGHLIGHT_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  SUMMARY.txt
.claude/: settings.local.json
sql-helper/: CHANGES.md  generate-icons.js  index.html  package-lock.json  package.json  run.bat  tailwind.config.js  vite.config.ts
sql-helper/.gemini/: cap-nhat-phim-tat.md  keyboard-shortcut-improvements.md
sql-helper/data/: template_translate.xlsx  translate.xlsx  ~$translate.xlsx
sql-helper/src/: App.tsx  index.css
sql-helper/src-tauri/: Cargo.toml  compile_errors.txt  tauri.conf.json
sql-helper/src-tauri/icons/: icon.icns
sql-helper/src-tauri/src/: java_parser.rs  main.rs
sql-helper/src/components/: CompareSuiteTab.tsx  ComparisonModal.tsx  GenerateTab.tsx  JavaParserTab.tsx  LabTab.tsx  Mermaid.tsx  ParamsTab.tsx  ResultSetTable.tsx  SchemaTab.tsx  SettingsTab.tsx  SourceCodeViewer.tsx  TextCompareTab.tsx  TranslateTab.tsx
sql-helper/src/store/: useAppStore.ts
sql-helper/src/utils/: diffLogic.ts  javaParser.ts  schemaComparator.ts  sqlGuard.ts  sqlParser.ts
