[package]
name = "sql-helper-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "fs-all", "clipboard-all", "shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mssql", "mysql", "postgres", "chrono", "any"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
urlencoding = "2.1"
tiberius = { version = "0.12", features = ["tds73", "chrono", "native-tls"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
chrono = "0.4"

tree-sitter = "0.20"
tree-sitter-java = "0.20"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
